; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_get_graphtrace_node.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_get_graphtrace_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_node = type { i32 }

@TN_KEY_LEN = common dso_local global i32 0, align 4
@TN_KEY_FMT = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, %struct.trace_node*)* @get_graphtrace_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_graphtrace_node(i32* %0, i32* %1, %struct.trace_node* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.trace_node*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.trace_node* %2, %struct.trace_node** %6, align 8
  %10 = load i32, i32* @TN_KEY_LEN, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %8, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %9, align 8
  %14 = load i32, i32* @TN_KEY_LEN, align 4
  %15 = load i8*, i8** @TN_KEY_FMT, align 8
  %16 = load %struct.trace_node*, %struct.trace_node** %6, align 8
  %17 = getelementptr inbounds %struct.trace_node, %struct.trace_node* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @snprintf(i8* %13, i32 %14, i8* %15, i32 %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @sdb_num_get(i32* %20, i8* %13, i32* null)
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %34, label %25

25:                                               ; preds = %3
  %26 = load i32*, i32** %4, align 8
  %27 = load %struct.trace_node*, %struct.trace_node** %6, align 8
  %28 = call i32* @r_graph_add_node(i32* %26, %struct.trace_node* %27)
  store i32* %28, i32** %7, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = ptrtoint i32* %30 to i64
  %32 = trunc i64 %31 to i32
  %33 = call i32 @sdb_num_set(i32* %29, i8* %13, i32 %32, i32 0)
  br label %34

34:                                               ; preds = %25, %3
  %35 = load i32*, i32** %7, align 8
  %36 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %36)
  ret i32* %35
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #2

declare dso_local i64 @sdb_num_get(i32*, i8*, i32*) #2

declare dso_local i32* @r_graph_add_node(i32*, %struct.trace_node*) #2

declare dso_local i32 @sdb_num_set(i32*, i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
